# RotatingPyramid

./: CMakeLists.txt  README.md  main.c
